--- a/www/templates/atomo_quantico-dashboard.html
+++ b/www/templates/atomo_quantico-dashboard.html
@@ -6,15 +6,15 @@
 			<div class="item item-title item-calm no-border">Principal</div>
 			<!-- row -->
 			<div class="row">
-				<a id="menu-box-ee4c41024817636d9a69f15a37353478a1a42273" class="col-33 calm-bg transparent ink"  ng-href="#/atomo_quantico/videos1" >
+				<a id="menu-box-ee4c41024817636d9a69f15a37353478a1a42273" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/videos1" >
 					<i class="icon ion-android-favorite" ></i>
 					<p>V&iacute;deos I</p>
 				</a>
-				<a id="menu-box-0061ac563a2a254aa778cb35f8da7c5b1d2c96f9" class="col-33 calm-bg transparent ink"  ng-href="#/atomo_quantico/videos2" >
+				<a id="menu-box-0061ac563a2a254aa778cb35f8da7c5b1d2c96f9" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/videos2" >
 					<i class="icon ion-android-favorite" ></i>
 					<p>V&iacute;deos II</p>
 				</a>
-				<a id="menu-box-a5e8559246d7751a777783609f2d42c5afc239e6" class="col-33 calm-bg transparent ink"  ng-href="#/atomo_quantico/videos3" >
+				<a id="menu-box-a5e8559246d7751a777783609f2d42c5afc239e6" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/videos3" >
 					<i class="icon ion-android-favorite" ></i>
 					<p>V&iacute;deos III</p>
 				</a>
@@ -25,15 +25,15 @@
 			<div class="item item-title item-calm no-border">S&eacute;ries</div>
 			<!-- row -->
 			<div class="row">
-				<a id="menu-box-5a01a5ede3a05978ce0421ce464112cd8affcb6b" class="col-33 calm-bg transparent ink"  ng-href="#/atomo_quantico/entrevistas" >
+				<a id="menu-box-5a01a5ede3a05978ce0421ce464112cd8affcb6b" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/entrevistas" >
 					<i class="icon ion-android-contacts" ></i>
 					<p>Entrevistas</p>
 				</a>
-				<a id="menu-box-0b6b4bd1edc3ced9d0df7dc965e0cc26e7bf61f3" class="col-33 calm-bg transparent ink"  ng-href="#/atomo_quantico/prosperidade" >
+				<a id="menu-box-0b6b4bd1edc3ced9d0df7dc965e0cc26e7bf61f3" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/prosperidade" >
 					<i class="icon ion-android-bulb" ></i>
 					<p>Prosperidade</p>
 				</a>
-				<a id="menu-box-ef5a56c67aca02a3afb225e29cf69e9340502274" class="col-33 calm-bg transparent ink"  ng-href="#/atomo_quantico/minutos" >
+				<a id="menu-box-ef5a56c67aca02a3afb225e29cf69e9340502274" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/minutos" >
 					<i class="icon ion-android-alarm-clock" ></i>
 					<p>Minutos</p>
 				</a>
@@ -44,7 +44,7 @@
 			<div class="item item-title item-calm no-border">Mais</div>
 			<!-- row -->
 			<div class="row">
-				<a id="menu-box-23930282a19c12022452febb031db23cb53c94bc" class="col-33 royal-bg transparent ink"  ng-href="#/atomo_quantico/about_us" >
+				<a id="menu-box-23930282a19c12022452febb031db23cb53c94bc" class="col-33 transparent-bg transparent ink"  ng-href="#/atomo_quantico/about_us" >
 					<i class="icon ion-android-alert" ></i>
 					<p>Sobre</p>
 				</a>
