--- a/www/templates/atomo_quantico-side_menus.html
+++ b/www/templates/atomo_quantico-side_menus.html
@@ -23,13 +23,13 @@
 					<i class="icon ion-ios-home"></i> {{ "Principal" | translate }}
 				</ion-item>
 				<ion-item  class="menu-videos1 item-sidebar item item-icon-left text-left dark-ink" nav-clear="" menu-close="" ui-sref="atomo_quantico.videos1">
-					<i class="icon ion-android-favorite"></i> {{ "Vídeos I" | translate }}
+					<i class="icon ion-android-film"></i> {{ "Vídeos I" | translate }}
 				</ion-item>
 				<ion-item  class="menu-videos2 item-sidebar item item-icon-left text-left dark-ink" nav-clear="" menu-close="" ui-sref="atomo_quantico.videos2">
-					<i class="icon ion-android-favorite"></i> {{ "Vídeos II" | translate }}
+					<i class="icon ion-android-film"></i> {{ "Vídeos II" | translate }}
 				</ion-item>
 				<ion-item  class="menu-videos3 item-sidebar item item-icon-left text-left dark-ink" nav-clear="" menu-close="" ui-sref="atomo_quantico.videos3">
-					<i class="icon ion-android-favorite-outline"></i> {{ "Vídeos III" | translate }}
+					<i class="icon ion-android-film"></i> {{ "Vídeos III" | translate }}
 				</ion-item>
 				<ion-item class="item item-divider text-left" >
 					 {{ "Séries" | translate }}
