--- a/www/templates/atomo_quantico-slide_tab_menu.html
+++ b/www/templates/atomo_quantico-slide_tab_menu.html
@@ -10,12 +10,12 @@
 							<a class="item item-icon-left" ng-href="#/atomo_quantico/entrevistas" >
 								<i class="icon ion-android-contacts" ></i>
 								<h2>{{ "Entrevistas" | translate }}</h2>
-								<span class="item-note pull-left">FAQs and Tutorial</span>
+								<span class="item-note pull-left"></span>
 							</a>
 							<a class="item item-icon-left" ng-href="#/atomo_quantico/prosperidade" >
 								<i class="icon ion-android-bulb" ></i>
 								<h2>{{ "Prosperidade" | translate }}</h2>
-								<span class="item-note pull-left">Taking a moment to rate this app?</span>
+								<span class="item-note pull-left"></span>
 							</a>
 							<a class="item item-icon-left" ng-href="#/atomo_quantico/minutos" >
 								<i class="icon ion-android-alarm-clock" ></i>
