Add existing file

--- a/www/templates/atomo_quantico-dashboard.html
+++ b/www/templates/atomo_quantico-dashboard.html
@@ -1,8 +1,7 @@
-	<ion-view view-title=" &amp;Aacute;tomo Qu&amp;acirc;ntico" hide-nav-bar="false" >
+	<ion-view view-title="&lt;img src=&quot;data/images/icon/atomo-quantico-transparente-icon 16x16.png&quot; class=&quot;page-logo&quot; /&gt; &amp;Aacute;tomo Qu&amp;acirc;ntico" hide-nav-bar="false" >
 		<!-- content -->
 		<ion-content delegate-handle="top"   id="page-dashboard" class="dashboard page-dashboard">
-		
-		<div class="dashboard-panel">
+				<div class="dashboard-panel">
 			<div class="item item-title item-calm no-border">Principal</div>
 			<!-- row -->
 			<div class="row">
