--- a/www/templates/atomo_quantico-about_us.html
+++ b/www/templates/atomo_quantico-about_us.html
@@ -1,11 +1,10 @@
-	<ion-view view-title=" Sobre" hide-nav-bar="false" >
+	<ion-view view-title="&lt;img src=&quot;data/images/icon/atomo-quantico-transparente-icon 16x16.png&quot; class=&quot;page-logo&quot; /&gt; Sobre" hide-nav-bar="false" >
 		<!-- content -->
 		<ion-content delegate-handle="top"   id="page-about_us" class=" page-about_us">
-		
-<div class="padding scroll">
+		<div class="padding scroll">
 
     <div class="padding about_us-box">
-        <h2>Atomo Quantico</h2>
+        <h2>&Aacute;tomo Qu&acirc;ntico</h2>
         <div>
             Seu canal sobre f&iacute;sica qu&acirc;ntica na internet.
         </div>
@@ -14,6 +13,7 @@
 
     <div class="disable-user-behavior about_us-box">
      
+      <!--
       <a class="item item-icon-left" ng-click="openURL('')" >
         <i class="positive icon ion-social-facebook"></i>
         Like Us on Facebook
@@ -28,10 +28,10 @@
         <i class="calm icon ion-social-twitter"></i>
        Follow me on Twitter
       </a>
-      
+      -->
        <a class="item item-icon-left" ng-click="openURL('mailto://atomoquantico@gmail.com')" >
         <i class="icon ion-android-mail royal"></i>
-        For Business Cooperation
+        Entre em contato conosco
         <p>
             Email: atomoquantico@gmail.com
         </p>
