--- a/www/templates/atomo_quantico-sobre.html
+++ b/www/templates/atomo_quantico-sobre.html
@@ -1,8 +1,7 @@
 	<ion-view view-title=" Sobre" hide-nav-bar="false" >
 		<!-- content -->
 		<ion-content delegate-handle="top"   id="page-sobre" class=" page-sobre">
-		
-<div class="padding scroll">
+		<div class="padding scroll">
 
     <div class="padding sobre-box">
         <h2>&Aacute;tomo Qu&acirc;ntico</h2>
@@ -14,24 +13,10 @@
 
     <div class="disable-user-behavior sobre-box">
      
-      <a class="item item-icon-left" ng-click="openURL('')" >
-        <i class="positive icon ion-social-facebook"></i>
-        Like Us on Facebook
-      </a>
-      
-      <a class="item item-icon-left" ng-click="openURL('')" >
-        <i class="assertive icon ion-social-googleplus"></i>
-        Join us on Google+
-      </a>
-      
-      <a class="item item-icon-left" ng-click="openURL('')" >
-        <i class="calm icon ion-social-twitter"></i>
-       Follow me on Twitter
-      </a>
       
        <a class="item item-icon-left" ng-click="openURL('mailto://atomoquantico@gmail.com')" >
         <i class="icon ion-android-mail royal"></i>
-        For Business Cooperation
+        Entre em contato conosco
         <p>
             Email: atomoquantico@gmail.com
         </p>
