init rules - dialy

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+body {
+  @apply font-sans bg-primary text-text-primary;
+}
